--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -24,6 +24,10 @@
   font-size: large;
 }
 
+.greeting {
+  font-style: italic;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
